Fix ApiClient: replace java.net.http with HttpURLConnection
java.net.http is a Java SE module not available in Android's ART runtime.